# skyquery

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  LICENSE  README.md  SECURITY.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
scripts/: make_fixtures.py
site/: _headers  app.js  index.html  robots.txt  sitemap.xml  styles.css
src/skyquery/: __init__.py  auth.py  client.py  config.py  errors.py  logging.py
src/skyquery/_fixtures/: arxiv__search__60e82ebe953e9fce.json  arxiv__search__e3948ffa10488cb1.json  gaia__cone_search__1dda2b1213ba88e4.json  horizons__ephemerides__77d1d9a61c1d314b.json  nasa__apod__f0918591449e4415.json  sbdb__query__290d67e80a073410.json  simbad__query_object__510e3e5c7fc0955d.json  simbad__query_object__913c00381dc1949b.json  simbad__query_object__e1d4995826cf1149.json
src/skyquery/cli/: __init__.py  main.py  render.py
src/skyquery/core/: __init__.py  cache.py  citations.py  convert.py  crossmatch.py  limits.py  ratelimit.py  units.py
src/skyquery/mcp/: __init__.py  server.py
src/skyquery/models/: __init__.py  catalog.py  coordinates.py  data_product.py  ephemeris.py  object.py  observation.py  paper.py  provenance.py  quantity.py
src/skyquery/services/: __init__.py  operations.py
src/skyquery/sources/: __init__.py  _tables.py  ads.py  arxiv.py  base.py  catalog_base.py  fixtures.py  gaia.py  horizons.py  mast.py  nasa.py  ned.py  planning.py  sbdb.py  simbad.py  vizier.py  vo.py  vo_policy.py
src/skyquery/store/: __init__.py  db.py
tests/: conftest.py  test_adapters.py  test_cache.py  test_citations.py  test_convert.py  test_credentials.py  test_crossmatch.py  test_limits.py  test_mcp_tools.py  test_models.py  test_ratelimit.py  test_services.py
