[project]
name = "skyquery-mcp"
version = "0.1.0"
description = "The sky, queryable. A local, open-source MCP server that puts the working astronomer's toolkit behind one conversation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Karthik Subramanian" }]
keywords = [
    "astronomy",
    "mcp",
    "model-context-protocol",
    "astroquery",
    "astropy",
    "ephemerides",
    "jpl-horizons",
    "simbad",
    "gaia",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "pydantic>=2.11,<3",
    "astropy>=6.1",
    "astroquery>=0.4.7",
    "scipy>=1.11",
    "astroplan>=0.10",
    "pyvo>=1.5",
    "keyring>=25.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1.360",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://skyquery.pages.dev"
Repository = "https://github.com/KarthikSubramanian07/skyquery"
Issues = "https://github.com/KarthikSubramanian07/skyquery/issues"
"Buy Me A Coffee" = "https://buymeacoffee.com/winnerkarthik"

[project.scripts]
skyquery = "skyquery.cli.main:app"
skyquery-mcp = "skyquery.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skyquery"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "PL", "C4", "PTH"]
# PLC0415: lazy imports are intentional here, deferring heavy astropy/astroquery
# imports out of the hot replay path and keeping optional deps optional.
ignore = ["PLR0913", "PLR2004", "PLR0911", "PLR0912", "PLR0915", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "N802"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# astropy and astroquery ship incomplete inline type information, so strict mode
# raises false positives at every call into them (SkyCoord/Quantity attribute
# access, Table indexing, astroquery return shapes). We keep strict mode for our
# own logic and disable only the diagnostics that fire purely at that untyped
# third-party boundary. See DECISIONS.md.
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportArgumentType = false
reportCallIssue = false
reportReturnType = false
reportIndexIssue = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "network: tests that require live network access (deselected by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning:astroquery.*",
    "ignore::DeprecationWarning:astropy.*",
]

[tool.coverage.run]
source = ["skyquery"]
omit = ["*/mcp/server.py"]
